<resources>
    <string name="app_name">AtomChat</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="what_is_atomchat">What is AtomChat?</string>
    <string name="what_is_atomchat_info">AtomChat is a decentralized chatting service that can be hosted in as many places as necessary, as long as the app is online and is connected to a server. Messages are only ever sent through the server, and if a user is not connected or closes the app, all current messages will be deleted and message history will not be saved.</string>
    <string name="but_why">But why?</string>
    <string name="why_reason">For some people, they might not find it practical to chat on a messaging platform where anyone can see anything. This app was created to reduce the digital footprint of anyone who wishes to be able to talk to their friends without the liabilities of most social media platforms observable today.</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="troubleshooting_reason">This app is in alpha, and will most likely stay that way for most of the time. Just ask the developer, atomtables, for help with this program. If you somehow got the APK file for this app, it is not on the play store, and will never be. Only install this app if you either know what you are doing, or if you learnt what is being done. Do not download this app from any other source but from atomtables, as other versions of this app may be considered viruses and should be treated as such.</string>
    <string name="change_username">Change Username</string>
    <string name="help">Help</string>
    <string name="thank_you_for_being_an_alpha_tester">Thank you for being an alpha tester!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="welcome_to_atomchat">Welcome to AtomChat</string>
    <string name="ip_address">IP Address</string>
    <string name="website_of_the_server">*website of the server</string>
    <string name="enter_chat">Enter Chat</string>
    <string name="log_out">Log Out</string>
</resources>